--- a/crash-handler/Cargo.toml
+++ b/crash-handler/Cargo.toml
@@ -22,20 +22,11 @@ debug-print = []
 cfg-if = "1.0"
 # Definition of a portable crash-context that can be shared between various
 # crates
-crash-context = "0.4"
+crash-context = { version = "0.4", path = "../crash-context" }
 # Wrapper around libc
 libc = "0.2"
 # Nicer sync primitives
 parking_lot = "0.12"
-
-[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
-version = "0.42" # Keep aligned with parking_lot & minidump-writer
-features = [
-    "Win32_Foundation",
-    "Win32_System_Diagnostics_Debug",
-    "Win32_System_Kernel",
-    "Win32_System_Threading",
-]
 
 [target.'cfg(target_os = "macos")'.dependencies]
 # Bindings to MacOS specific APIs that are used. Note we don't use the `mach`
