--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ members = [
 
 [profile.dev]
 debug = 2
+
+[patch.crates-io]
+minidump-writer = { git = "https://github.com/rust-minidump/minidump-writer", branch = "remove-winapi" }
+crash-context = { path = "crash-context" }
