--- a/deny.toml
+++ b/deny.toml
@@ -44,6 +44,7 @@ skip = [
     { name = "num-traits", version = "=0.1.43" },
 
     { name = "syn", version = "1.0" },
+    { name = "bitflags", version = "=1.3.2" },
 ]
 skip-tree = []
 
