--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -19,7 +19,7 @@ keywords = ["crash", "minidump", "ipc", "out-of-process"]
 [dependencies]
 # Nicer cfg handling
 cfg-if = "1.0"
-crash-context = "0.5"
+crash-context = { version = "0.5", path = "../crash-context" }
 libc = "0.2"
 # Basic log emitting
 log = "0.4"
@@ -39,11 +39,6 @@ uds = "0.2.6"
 [target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
 # Nicer binary interop
 scroll = "0.11"
-
-# Bindings to Win32
-[target.'cfg(target_os = "windows")'.dependencies.winapi]
-version = "0.3"
-features = ["handleapi", "winbase", "winsock2"]
 
 [dev-dependencies]
 # Diskwrite example
