--- a/minidumper/Cargo.toml
+++ b/minidumper/Cargo.toml
@@ -38,7 +38,7 @@ uds = "0.4"
 
 [target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
 # Nicer binary interop
-scroll = "0.12"
+scroll = { version = "0.12", features = ["derive"] }
 
 [dev-dependencies]
 # Diskwrite example
