--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -60,7 +60,7 @@ jobs:
           #- { target: aarch64-unknown-linux-gnu, toolchain: stable }
           - { target: aarch64-unknown-linux-musl, toolchain: stable }
           # workaround for https://github.com/cross-rs/cross/issues/1222
-          - { target: aarch64-linux-android, toolchain: "1.67.0" }
+          - { target: aarch64-linux-android, toolchain: stable }
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
