--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -59,7 +59,6 @@ jobs:
         job:
           #- { target: aarch64-unknown-linux-gnu, toolchain: stable }
           - { target: aarch64-unknown-linux-musl, toolchain: stable }
-          # workaround for https://github.com/cross-rs/cross/issues/1222
           - { target: aarch64-linux-android, toolchain: stable }
     steps:
       - uses: actions/checkout@v3
@@ -70,11 +69,13 @@ jobs:
           target: ${{ matrix.job.target }}
       - uses: Swatinem/rust-cache@v2
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          use-cross: true
-          args: --target ${{ matrix.job.target }} --verbose --all-targets
+        run:
+          # We need to install cross from git, because https://github.com/cross-rs/cross/issues/1222
+          # is still unreleased (it's been almost a year since the last release)
+          # and we can't use 1.67.0 any longer because some dependencies (sigh,
+          # home, really?) have a higher MSRV...so...
+          cargo install cross --git https://github.com/cross-rs/cross --rev 185398b
+          cross build --target ${{ matrix.job.target }} --verbose --all-targets
 
   deny-check:
     name: cargo-deny
